--- a/rebar.config
+++ b/rebar.config
@@ -182,7 +182,7 @@
 
 %% == Releases ==
 
-{relx, [{release, { myproject_release, "0.0.1"},
+{relx, [{release, { mnesia_docker, "0.0.1"},
          [ sasl,
            runtime_tools,
            observer,
@@ -191,7 +191,10 @@
          ]},
         {dev_mode, true},
         {include_erts, false},
-        {extended_start_script, true}]
+        {extended_start_script, true},
+        {vm_args, "config/vm.args"},
+        {sys_config, "config/sys.config"}
+        ]
 }.
 
 %% == Shell ==
