--- a/rebar.config
+++ b/rebar.config
@@ -182,18 +182,18 @@
 
 %% == Releases ==
 
-{relx, [{release, { mnesia_docker, "0.0.1"},
+{relx, [{release, { mnesia_cluster, "0.0.2"},
          [ sasl,
            runtime_tools,
            observer,
            mnesia,
-           mnesia_docker
+           mnesia_cluster
          ]},
         {dev_mode, true},
         {include_erts, false},
-        {extended_start_script, true},
-        {vm_args, "config/vm.args"},
-        {sys_config, "config/sys.config"}
+        {extended_start_script, true}
+        %{vm_args, "config/vm.args"},
+        %{sys_config, "config/sys.config"}
         ]
 }.
 
@@ -203,7 +203,7 @@
 %% specified in a `relx' tuple, if any.
 {shell, [{apps, [
     mnesia,
-    mnesia_docker
+    mnesia_cluster
 ]}]}.
 
 %% == xref ==
