--- a/sys.cluster.node.a.config
+++ b/sys.cluster.node.a.config
@@ -1,7 +1,7 @@
 [
 
  {kernel, [
-   % {error_logger, {file, "a/log/error.log"}},
+   {error_logger, {file, "a/log/error.log"}},
    {sync_nodes_mandatory, [
 	'a@localhost',
 	'b@localhost',
