cleanup. use relx release.

--- a/config/sys.config
+++ b/config/sys.config
@@ -1,7 +1,14 @@
 [
- 
+
+ {mnesia_cluster,[
+     {tables,[
+         % Example mnesia table
+         ex_mnesia_tbl
+     ]}
+ ]},
+
  {kernel, [
-   % {error_logger, {file, "log/error.log"}},
+   {error_logger, {file, "log/error.log"}},
    {sync_nodes_mandatory, [
    ]},
    {sync_nodes_timeout, infinity}
