--- a/rebar.config
+++ b/rebar.config
@@ -191,9 +191,9 @@
          ]},
         {dev_mode, true},
         {include_erts, false},
-        {extended_start_script, true}
-        %{vm_args, "config/vm.args"},
-        %{sys_config, "config/sys.config"}
+        {extended_start_script, true},
+        {vm_args, "config/vm.args"},
+        {sys_config, "config/sys.config"}
         ]
 }.
 
