move schema acts to mnesia_cluster_lib

--- a/rebar.config
+++ b/rebar.config
@@ -72,7 +72,7 @@
 %% type, location and revision).
 %% Rebar3 currently supports git and hg
 {deps, [
-    %% {rebar, {git, "https://github.com/rebar/rebar.git", {branch, "master"}}}
+    {mnesia_cluster_lib, {git, "https://github.com/ruanpienaar/mnesia_cluster_lib.git", {branch, "master"}}}
 ]}.
 
 
@@ -187,6 +187,7 @@
            runtime_tools,
            observer,
            mnesia,
+           mnesia_cluster_lib,
            mnesia_cluster
          ]},
         {dev_mode, true},
